[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts-C/MenuSup2.gd" type="Script" id=1]
[ext_resource path="res://Imagens/Botoes/home.png" type="Texture" id=2]
[ext_resource path="res://Imagens/Botoes/home_c.png" type="Texture" id=3]
[ext_resource path="res://Imagens/Botoes/home_h.png" type="Texture" id=4]
[ext_resource path="res://Imagens/Botoes/som.png" type="Texture" id=5]
[ext_resource path="res://Imagens/Botoes/som_c.png" type="Texture" id=6]
[ext_resource path="res://Imagens/Botoes/som_h.png" type="Texture" id=7]
[ext_resource path="res://Imagens/Botoes/sair.png" type="Texture" id=8]
[ext_resource path="res://Imagens/Botoes/sair_c.png" type="Texture" id=9]
[ext_resource path="res://Imagens/Botoes/sair_h.png" type="Texture" id=10]
[ext_resource path="res://Imagens/Botoes/config.png" type="Texture" id=11]
[ext_resource path="res://Imagens/Botoes/config_c.png" type="Texture" id=12]
[ext_resource path="res://Imagens/Botoes/config_h.png" type="Texture" id=13]
[ext_resource path="res://Imagens/Backgrounds/caixa.png" type="Texture" id=14]
[ext_resource path="res://Imagens/Textos/nãotexto.png" type="Texture" id=15]
[ext_resource path="res://Imagens/Botoes/não.png" type="Texture" id=16]
[ext_resource path="res://Imagens/Botoes/nãoOver.png" type="Texture" id=17]
[ext_resource path="res://Imagens/Botoes/Sim.png" type="Texture" id=18]
[ext_resource path="res://Imagens/Botoes/simOver.png" type="Texture" id=19]

[node name="MenuSup2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Home" type="TextureButton" parent="."]
margin_left = 1454.0
margin_top = 48.0
margin_right = 1941.0
margin_bottom = 513.0
rect_scale = Vector2( 0.172, 0.172 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Mute" type="TextureButton" parent="."]
margin_left = 1614.0
margin_top = 48.0
margin_right = 2139.0
margin_bottom = 547.0
rect_scale = Vector2( 0.172, 0.172 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Sair" type="TextureButton" parent="."]
margin_left = 1774.0
margin_top = 48.0
margin_right = 2251.0
margin_bottom = 547.0
rect_scale = Vector2( 0.172, 0.172 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Opc" type="TextureButton" parent="."]
margin_left = 1294.0
margin_top = 48.0
margin_right = 1410.0
margin_bottom = 163.0
rect_scale = Vector2( 0.712, 0.712 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="SairPop" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="SairPop"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.333333, 0.333333, 0.333333, 0.556863 )

[node name="Fundo" type="TextureRect" parent="SairPop"]
margin_left = 670.0
margin_top = 205.0
margin_right = 1324.0
margin_bottom = 877.0
texture = ExtResource( 14 )

[node name="SairTexto" type="TextureRect" parent="SairPop"]
margin_left = 710.907
margin_top = 348.234
margin_right = 1313.91
margin_bottom = 562.234
texture = ExtResource( 15 )

[node name="NAO" type="TextureButton" parent="SairPop"]
margin_left = 1054.0
margin_top = 680.0
margin_right = 1187.0
margin_bottom = 755.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 17 )

[node name="SIM" type="TextureButton" parent="SairPop"]
margin_left = 760.0
margin_top = 680.0
margin_right = 893.0
margin_bottom = 755.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 18 )
texture_hover = ExtResource( 19 )
[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Mute" to="." method="_on_Mute_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="Opc" to="." method="_on_Opc_pressed"]
[connection signal="pressed" from="SairPop/NAO" to="." method="_on_NAO_pressed"]
[connection signal="pressed" from="SairPop/SIM" to="." method="_on_SIM_pressed"]
